--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -365,9 +365,9 @@
                         {
                             if (IsShippingMethodEnabled(item))
                             {
-                                <label for="@item" class="form-label ">
+                                <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
-                                           class="form-check-input me-1"
+                                           class="form-check-input"
                                            id="@item"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                       (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
@@ -399,9 +399,9 @@
                         {
                             if (IsShippingMethodEnabled(item))
                             {
-                                <label for="@item" class="form-label">
+                                <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
-                                           class="form-check-input me-1"
+                                           class="form-check-input"
                                            id="@item"
                                            disabled="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                    (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) &&
@@ -433,9 +433,9 @@
                         {
                             if (IsShippingMethodEnabled(item))
                             {
-                                <label for="@item" class="form-label ">
+                                <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
-                                           class="form-check-input me-1"
+                                           class="form-check-input"
                                            id="@item"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                   (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
@@ -456,9 +456,9 @@
                         {
                             if (IsShippingMethodEnabled(item))
                             {
-                                <label for="@item" class="form-label">
+                                <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
-                                           class="form-check-input me-1"
+                                           class="form-check-input"
                                            id="@item"
                                            disabled="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) &&
@@ -484,9 +484,9 @@
                         {
                             if (IsShippingMethodEnabled(item))
                             {
-                                <label for="@item" class="form-label ">
+                                <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
-                                           class="form-check-input me-1"
+                                           class="form-check-input"
                                            id="@item"
                                            checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                   (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
@@ -508,9 +508,9 @@
                         {
                             if (IsShippingMethodEnabled(item))
                             {
-                                <label for="@item" class="form-label">
+                                <label for="@item" class="form-label me-2">
                                     <input type="checkbox"
-                                           class="form-check-input me-1"
+                                           class="form-check-input"
                                            id="@item"
                                            disabled="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) &&
@@ -533,9 +533,9 @@
                     {
                         if (IsShippingMethodEnabled(item))
                         {
-                            <label for="@item" class="form-label ">
+                            <label for="@item" class="form-label me-2">
                                 <input type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@item"
                                        checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                           (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
@@ -547,9 +547,9 @@
                     if (item == Enum.GetName(DeliveryMethod.DeliveredByStore) ||
                     item == Enum.GetName(DeliveryMethod.SelfPickup))
                     {
-                        <label for="@item" class="form-label">
+                        <label for="@item" class="form-label me-2">
                             <input type="checkbox"
-                                   class="form-check-input me-1"
+                                   class="form-check-input"
                                    id="@item"
                                    disabled="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                                                (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) &&
@@ -604,9 +604,9 @@
                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenFrozen")) ||
                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))))
                         {
-                            <label for="@island" class="form-label">
+                            <label for="@island" class="form-label me-2">
                                 <input type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@island"
                                        checked="@(EditGroupBuyDto.BlackCatDeliveryTime is not null && EditGroupBuyDto.BlackCatDeliveryTime.Contains(island))"
                                        @onchange="(value) => BlackCatDeliveryTimeCheckedChange(island, value)" />
@@ -615,10 +615,10 @@
                         }
                         else
                         {
-                            <label for="@island" class="form-label">
+                            <label for="@island" class="form-label me-2">
                                 <input disabled
                                        type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@island"
                                        checked="@(EditGroupBuyDto.BlackCatDeliveryTime is not null && EditGroupBuyDto.BlackCatDeliveryTime.Contains(island))"
                                        @onchange="(value) => BlackCatDeliveryTimeCheckedChange(island, value)" />
@@ -632,6 +632,7 @@
             <div class="col-2"></div>
             <div class="col-2"></div>
             <div class="col-8">
+                <Div Class="mt-2"></Div>
                 <label class="form-label">@L["HomeDelivery"]<span class="text-danger"> </span></label>
             </div>
             <div class="col-2"></div>
@@ -644,9 +645,9 @@
                         @if ((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("HomeDelivery")))
                         {
-                            <label for="@(island)_HomeDelivery" class="form-label">
+                            <label for="@(island)_HomeDelivery" class="form-label me-2">
                                 <input type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@island"
                                        disabled="@(island is not PikachuResource.UnableToSpecifyDuringPeakPeriods ?
                                                     IsUnableToSpecifyDuringPeakPeriodsForHomeDelivery :
@@ -659,10 +660,10 @@
                         }
                         else
                         {
-                            <label for="@(island)_HomeDelivery" class="form-label">
+                            <label for="@(island)_HomeDelivery" class="form-label me-2">
                                 <input disabled
                                        type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@island"
                                        checked="@(EditGroupBuyDto.HomeDeliveryDeliveryTime is not null &&
                                                          EditGroupBuyDto.HomeDeliveryDeliveryTime.Contains(island))"
@@ -689,9 +690,9 @@
                         @if ((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("SelfPickup")))
                         {
-                            <label for="@(island)_SelfPickUp" class="form-label">
+                            <label for="@(island)_SelfPickUp" class="form-label me-2">
                                 <input type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@island"
                                        disabled="@(island is not PikachuResource.UnableToSpecifyDuringPeakPeriods ?
                                                         IsUnableToSpecifyDuringPeakPeriodsForSelfPickups :
@@ -704,10 +705,10 @@
                         }
                         else
                         {
-                            <label for="@(island)_SelfPickUp" class="form-label">
+                            <label for="@(island)_SelfPickUp" class="form-label me-2">
                                 <input disabled
                                        type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@island"
                                        checked="@(EditGroupBuyDto.SelfPickupDeliveryTime is not null &&
                                                       EditGroupBuyDto.SelfPickupDeliveryTime.Contains(island))"
@@ -721,6 +722,7 @@
             <div class="col-2"></div>
             <div class="col-2"></div>
             <div class="col-8">
+                <Div Class="mt-2"></Div>
                 <label class="form-label">@L["DeliveredByStore"]<span class="text-danger"> </span></label>
             </div>
             <div class="col-2"></div>
@@ -733,9 +735,9 @@
                         @if ((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
                        (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")))
                         {
-                            <label for="@(island)_DeliveredByStore" class="form-label">
+                            <label for="@(island)_DeliveredByStore" class="form-label me-2">
                                 <input type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@island"
                                        disabled="@(island is not PikachuResource.UnableToSpecifyDuringPeakPeriods ?
                                                     IsUnableToSpecifyDuringPeakPeriodsForDeliveredByStore :
@@ -748,10 +750,10 @@
                         }
                         else
                         {
-                            <label for="@(island)_DeliveredByStore" class="form-label">
+                            <label for="@(island)_DeliveredByStore" class="form-label me-2">
                                 <input disabled
                                        type="checkbox"
-                                       class="form-check-input me-1"
+                                       class="form-check-input"
                                        id="@island"
                                        checked="@(EditGroupBuyDto.DeliveredByStoreDeliveryTime is not null &&
                                                      EditGroupBuyDto.DeliveredByStoreDeliveryTime.Contains(island))"
