--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -15,7 +15,8 @@
 @inject AbpBlazorMessageLocalizerHelper<PikachuResource> LH
 @inject IJSRuntime JSRuntime;
 @inject IProductCategoryAppService ProductCategoryAppService
-
+@using Microsoft.JSInterop;
+@inject IJSRuntime JS;
 <style>
     .row {
         margin-top: 10px;
@@ -24,6 +25,13 @@
     .drag-drop-span i {
         cursor: pointer;
     }
+        .draggable-row {
+    cursor: grab;
+}
+
+.draggable-row:active {
+    cursor: grabbing;
+}
 </style>
 
 <LoadingIndicator @ref="Loading" FullScreen></LoadingIndicator>
@@ -329,12 +337,19 @@
                                 <TableHeaderCell Class="text-center">
                                     @L["Status"]
                                 </TableHeaderCell>
+                                    <TableHeaderCell Class="text-center">
+                                      
+                                    </TableHeaderCell>
                             </TableRow>
                         </TableHeader>
                         <TableBody>
-                            @foreach (CreateItemDetailsDto item in ItemDetailsList)
+                            @foreach (CreateItemDetailsDto item in ItemDetailsList.OrderBy(x=>x.SortNo))
                             {
-                                <TableRow Class="text-center align-items-center">
+                                <TableRow Class="text-center align-items-center draggable-row"
+                                 Draggable=true
+                                 DragStart="(e) => OnDragStart(e, item)"
+                                 DragOver="(e) => OnDragOver(e)"
+                                 Drop="(e) => OnDrop(e, item)">                            
                                     <TableRowCell>
                                         <i class="fas fa-caret-@(item.IsExpanded ? "up" : "down")" @onclick="@(() => ToggleExpanded(item))" />
                                     </TableRowCell>
@@ -381,6 +396,9 @@
                                     <TableRowCell>
                                         <Switch @bind-Checked="@item.Status" />
                                     </TableRowCell>
+                                       <TableRowCell>
+                                              <i class="fa-solid fa-bars fa-2xl"></i>
+                                        </TableRowCell>
                                 </TableRow>
 
                                 @if (item.IsExpanded)
