--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
@@ -106,6 +106,16 @@
                     <ValidationMessage For="@(() => LinePay.ChannelSecretKey)" />
                 </div>
             </div>
+            <div class="row justify-content-center mb-2">
+                <div class="col-2 text-end">
+                    <label class="form-label" for="channel-secret-key">
+                        @L["LinePointsRedemption"]
+                    </label>
+                </div>
+                <div class="col-6">
+                    <Switch TValue="bool" id="l-enable-disable-switch" @bind-Checked="LinePay.LinePointsRedemption" Disabled=IsLinePayNotExists />
+                </div>
+            </div>
             @if (IsLinePayNotExists)
             {
                 <div class="row mt-3">
