Commit for Pk-937

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -409,7 +409,7 @@
                                         <TableRowCell Colspan="9">
                                             <Div Class="col-12">
                                                 <Div Class="col-12">
-                                                    <MemoEdit @bind-Text="@item.ItemDescription" />
+                                                    <MemoEdit Placeholder=@L["EnterItemStyleDescription"] @bind-Text="@item.ItemDescription" />
                                                 </Div>
                                                 <br />
                                                 <Div Class="col-12">
